# sticker-bucket

./: .eslintrc.cjs  .gitignore  LICENSE  README.md  components.json  eslintconfig.js  flake.nix  index.html  justfile  package.json  pnpm-lock.yaml  stickerbucket.nix  stickybucket.nix  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: release.yml  test.yml
nix/: sticker-bucket.nix
nix/overlays/: cargo-tauri.nix  default.nix
src/: App.vue  const.ts  global.sass  global.scss  main.ts  main.tsx  router.ts  router.tsx  routes.tsx
src-cpp/: .gitignore  CMakeLists.txt
src-cpp/header/: bridge.h
src-cpp/model/: ch_ppocr_mobile_v2.0_cls.onnx
src-cpp/scripts/: configurations_win_x64.ps1  configurations_win_x86.ps1
src-cpp/src/: bridge.cpp  bridge.h
src-cpp/src/ocr/: text_angle_cls.h  text_det.cpp  text_rec.cpp  text_rec.h
src-cpp/tests/: hello.cpp
src-cxx/: .gitignore  CMakeLists.txt  xmake.lua
src-cxx/py/: phash.hy
src-cxx/src/: phash_test.cpp
src-tauri/: .gitignore  Cargo.toml  build.rs  copy-resource.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cpp/: .gitignore  CMakeLists.txt
src-tauri/cpp/scripts/: configurations_win_x64.ps1
src-tauri/cpp/src/: bridge.cpp  bridge.h
src-tauri/cpp/src/ocr/: text_angle_cls.cpp  text_det.cpp  text_det.h  text_rec.cpp  text_rec.h
src-tauri/cpp/tests/: hello.cpp
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.rs  cfg.rs  db.rs  error.rs  file.rs  lib.rs  library.rs  main.rs  meme.rs  prefs.rs  search.rs  zustand_storage.rs
src-tauri/src/cmd/: library.rs  library.sql
src-tauri/src/db/: create_database.sql  create_tableversion.sql  database_init.sql  mod.rs  search.rs  upgrade_0_1.sql
src-tauri/src/handler/: database.rs  debug.rs  local.rs  meme.rs  mod.rs
src-tauri/src/meme/: interfer.rs  mod.rs
src-tauri/src/search/: mod.rs  sql.rs
src-tauri/src/storage/: db.rs  db_init.sql  mod.rs  prefs.rs
src/component/: Image.tsx  MemeEditor.tsx  MemeList.tsx  MemeListPreviewItem.tsx  MemePreview.tsx  MemeTextEditor.tsx  TagEditor.tsx  TagShowcase.tsx
src/component/settings/: ComboBoxItem.tsx  DividerItem.tsx
src/components/: MemeBasicInfoEditor.vue  MemeView.vue  Sidebar.vue  info-view.tsx  nav.tsx  package-combobox.tsx  sticker-add-file.tsx  sticker-editor.tsx  sticky-add-dialog.tsx  sticky-add-file.tsx  sticky-editor.tsx  tag-editor.tsx  tag-viewer.tsx  text-add.tsx  text-editor.tsx
src/components/basic/: AutoComplate.vue  Button.vue  Card.vue  Checkbox.vue  Divider.vue  InputField.vue  Tag.vue  TitleBar.vue
src/components/pref/: pref-file.tsx  pref-input.tsx  pref-list.tsx  pref-switch.tsx
src/components/sticker-list/: index.tsx  sticker-grid.tsx
src/components/sticky-list/: index.tsx  sticky-grid.tsx
src/components/ui/: autocomplete.tsx  checkbox.tsx  combobox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  nav.tsx  pagination.tsx
src/i18n/: I18nIntegrityValidate.test.ts  en.ts  en_US.ts  index.ts  zhHans.ts  zh_CN.ts
src/lib/: sys.ts  utils.ts
src/lib/cmd/: library.ts
src/lib/hook/: useDarkMode.ts  useDialog.tsx  useTheme.ts
src/lib/hooks/: useDarkMode.ts  useLng.ts  useTitle.ts
src/libs/: listener.ts  search.ts
src/libs/native/: db.ts  windows.ts  zustand.ts
src/libs/ocr/: index.ts
src/libs/ocr/paddle/: index.ts  paddle.d.ts  paddle.js
src/model/: meme.ts
src/native/: windows.ts
src/pages/: layout.tsx
src/pages/Landing/: Landing.tsx  index.ts
src/pages/add/: layout.tsx  loader.ts  page.tsx
src/pages/add/image/: loader.ts  page.tsx
src/pages/add/text/: page.tsx
src/pages/batch-add-sticker/: completed.tsx  data-loader.ts  index.tsx
src/pages/batch-add-sticky/: data-loader.ts  index.tsx
src/pages/dashboard/: DashboardAppbar.tsx  DashboardContent.tsx  DashboardDrawer.tsx  layout.tsx  page.tsx
src/pages/edit/: layout.tsx  loader.ts
src/pages/edit/image/: page.tsx
src/pages/edit/text/: page.tsx
src/pages/error/: index.tsx
src/pages/global-pref/: index.tsx
src/pages/loading/: index.ts  page.tsx
src/pages/loading-girl-praying/: index.tsx
src/pages/main/: index.tsx
src/pages/main/all/: index.tsx
src/pages/main/settings/: database.tsx  display.tsx  index.tsx
src/pages/main/viewer/: index.tsx
src/pages/meme/: loader.ts  page.tsx
src/pages/settings/: layout.tsx  page.tsx
src/pages/startup/: index-loader.ts  index.module.sass  index.tsx  project.tsx  router.tsx
src/pages/viewer/: index.tsx  stickerDataloader.ts  stickyDataloader.ts
src/pages/welcome/: layout.tsx  page.tsx
src/prefs/: index.ts  type.ts
src/scripts/rs/: db.ts  debug.ts  local.ts  meme.ts
src/scss/: scrollbar.scss  styles.scss  theme.scss
src/store/: database.ts  modal.tsx  settings.ts  storageHistory.ts
src/views/: Main.vue  MemeAdd.vue  MemeBulkAdd.vue  MemeEditInfo.vue  MemeView.vue  Settings.vue
src/views/settings/: About.vue  Main.vue
