[package]
name = "mmm"
version = "0.0.0"
description = "A Tauri App"
authors = ["mslxl"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
  "path-all",
  "protocol-all",
  "dialog-open",
  "window-all",
  "shell-open",
] }
rusqlite = { version = "0.29.0", features = ["bundled", "chrono", "time"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32.0", features = [
  "fs",
  "io-std",
  "io-util",
  "net",
  "sync",
  "time",
  "bytes",
] }
serde_json = "1.0"
reqwest = "0.11.18"
time = { version = "0.3.26", features = ["formatting", "macros", "serde"] }
sha256 = "1.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
