[package]
name = "sticker-library"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sticker_library_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "=2.0.0-rc.3", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39.3", features = ["full"] }
once_cell = "1.19.0"
anyhow = "1.0.86"
sqlx = { version = "0.8.1", features = ["runtime-tokio", "chrono", "migrate", "macros", "derive", "sqlite"] }
toml = "0.8.19"
thiserror = "1.0.63"
specta = "=2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.17", features = ["derive", "typescript"] }
sha2 = "0.10.8"
zstd = "0.13.2"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.1.0-beta.7"
